Inject getLiveIndicator stubs
SelectMultipleDevicesDialogTableTest was failing in isolation because
ExecutionUtil depended on the Application which was null in this
context. Inject stubs that return mock icons.

Bug: Not applicable
Test: SelectMultipleDevicesDialogTableTest
Change-Id: I8249b9bfb4970560666b1a9eb4601fc719b97103

GitOrigin-RevId: e9aa25a99d80a2795e2863fe0b2a3038093d52b3